--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-// ## Option Two: Word Guess Game (Challenge - Recommended)
+/ * ## Option Two: Word Guess Game (Challenge - Recommended)
 
 1. [Watch the demo](https://youtu.be/W-IJcC4tYFI).
 
@@ -115,4 +115,278 @@ If you have any questions about this project or the material we have covered, pl
 in slack so that your fellow developers can help you! If you're still having trouble, you can come to office hours for
 assistance from your instructor and TAs.
 
-**Good Luck!**
+**Good Luck!** * /
+
+
+<!DOCTYPE html>
+<!-- Welcome to The Payback Word Guess Game where Guessing the right Word can PAY YOU BACK!-->
+<!-- We're Excited to Have the Players Play this Game-->
+<!--Each player has 10 Guesses to Solve 4 Secret Words-->
+<!-- Solve All 4 Words and Win 1000000 dollars!-->
+<!-- Word Catagory is Always animalHouse-->
+<html class="no-js">
+<!--<![endif]-->
+
+<head>
+    <meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <title>Pay Back Word Guess Game</title>
+    <meta name="description" content="">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="">
+</head>
+
+<body>
+
+    <h1>Payback Word Guess Game</h1>
+
+    <h2>
+        <quote>"Where Guessing the Right Word can Pay You Back!"</quote>
+    </h2>
+
+    <img src="assets/images/PaybackWordGuess.jpg">
+
+
+    <script type="text/javascript">
+
+
+        // Create Word Guess Bank of Words 
+
+        var wordBank = [
+            "Aardvark",
+            "Albatross",
+            "Alligator",
+            "Alpaca",
+            "Ant",
+            "Anteater",
+            "Antelope",
+            "Ape",
+            "Armadillo",
+            "Donkey",
+            "Baboon",
+            "Badger",
+            "Barracuda",
+            "Bat",
+            "Bear",
+            "Beaver",
+            "Bee",
+            "Bison",
+            "Boar",
+            "Buffalo",
+            "Butterfly",
+            "Camel",
+            "Capybara",
+            "Caribou",
+            "Cassowary",
+            "Cat",
+            "Caterpillar",
+            "Cattle",
+            "Chamois",
+            "Cheetah",
+            "Chicken",
+            "Chimpanzee",
+            "Chinchilla",
+            "Chough",
+            "Clam",
+            "Cobra",
+            "Cockroach",
+            "Cod",
+            "Cormorant",
+            "Coyote",
+            "Crab",
+            "Crane",
+            "Crocodile",
+            "Crow",
+            "Curlew",
+            "Deer",
+            "Dinosaur",
+            "Dog",
+            "Dogfish",
+            "Dolphin",
+            "Dotterel",
+            "Dove",
+            "Dragonfly",
+            "Duck",
+            "Dugong",
+            "Dunlin",
+            "Eagle",
+            "Echidna",
+            "Eel",
+            "Eland",
+            "Elephant",
+            "Elk",
+            "Emu",
+            "Falcon",
+            "Ferret",
+            "Finch",
+            "Fish",
+            "Flamingo",
+            "Fly",
+            "Fox",
+            "Frog",
+            "Gaur",
+            "Gazelle",
+            "Gerbil",
+            "Giraffe",
+            "Gnat",
+            "Gnu",
+            "Goat",
+            "Goldfinch",
+            "Goldfish",
+            "Goose",
+            "Gorilla",
+            "Goshawk",
+            "Grasshopper",
+            "Grouse",
+            "Guanaco",
+            "Gull",
+            "Hamster",
+            "Hare",
+            "Hawk",
+            "Hedgehog",
+            "Heron",
+            "Herring",
+            "Hippopotamus",
+            "Hornet",
+            "Horse",
+            "Human",
+            "Hummingbird",
+            "Hyena",
+            "Ibex",
+            "Ibis",
+            "Jackal",
+            "Jaguar",
+            "Jay",
+            "Jellyfish",
+            "Kangaroo",
+            "Kingfisher",
+            "Koala",
+            "Kookabura",
+            "Kouprey",
+            "Kudu",
+            "Lapwing",
+            "Lark",
+            "Lemur",
+            "Leopard",
+            "Lion",
+            "Llama",
+            "Lobster",
+            "Locust",
+            "Loris",
+            "Louse",
+            "Lyrebird",
+            "Magpie",
+            "Mallard",
+            "Manatee",
+            "Mandrill",
+            "Mantis",
+            "Marten",
+            "Meerkat",
+            "Mink",
+            "Mole",
+            "Mongoose",
+            "Monkey",
+            "Moose",
+            "Mosquito",
+            "Mouse",
+            "Mule",
+            "Narwhal",
+            "Newt",
+            "Nightingale",
+            "Octopus",
+            "Okapi",
+            "Opossum",
+            "Oryx",
+            "Ostrich",
+            "Otter",
+            "Owl",
+            "Oyster",
+            "Panther",
+            "Parrot",
+            "Partridge",
+            "Peafowl",
+            "Pelican",
+            "Penguin",
+            "Pheasant",
+            "Pig",
+            "Pigeon",
+            "Pony",
+            "Porcupine",
+            "Porpoise",
+            "Quail",
+            "Quelea",
+            "Quetzal",
+            "Rabbit",
+            "Raccoon",
+            "Rail",
+            "Ram",
+            "Rat",
+            "Raven",
+            "Red deer",
+            "Red panda",
+            "Reindeer",
+            "Rhinoceros",
+            "Rook",
+            "Salamander",
+            "Salmon",
+            "Sand Dollar",
+            "Sandpiper",
+            "Sardine",
+            "Scorpion",
+            "Seahorse",
+            "Seal",
+            "Shark",
+            "Sheep",
+            "Shrew",
+            "Skunk",
+            "Snail",
+            "Snake",
+            "Sparrow",
+            "Spider",
+            "Spoonbill",
+            "Squid",
+            "Squirrel",
+            "Starling",
+            "Stingray",
+            "Stinkbug",
+            "Stork",
+            "Swallow",
+            "Swan",
+            "Tapir",
+            "Tarsier",
+            "Termite",
+            "Tiger",
+            "Toad",
+            "Trout",
+            "Turkey",
+            "Turtle",
+            "Viper",
+            "Vulture",
+            "Wallaby",
+            "Walrus",
+            "Wasp",
+            "Weasel",
+            "Whale",
+            "Wildcat",
+            "Wolf",
+            "Wolverine",
+            "Wombat",
+            "Woodcock",
+            "Woodpecker",
+            "Worm",
+            "Wren",
+            "Yak",
+            "Zebra"
+        ];
+
+        console.log(wordBank[104]);
+
+        console.log(wordBank[207]);
+
+
+
+
+    </script>
+</body>
+
+</html>
