update script edit

--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
 
 
         // Computer Picks a Random Word
-        var word = wordBank[Match.floor(Math.random() * wordBank.length)];
+        var word = wordBank[Math.floor(Math.random() * wordBank.length)];
 
         // Hidden Answer Array to hide Randomly Selected Word
         var hiddenAnswer = [];
