working on Game Flow and Alert Messages

--- a/index.html
+++ b/index.html
@@ -25,291 +25,87 @@
         <quote>"Where Guessing the Right Word can Pay You Back!"</quote>
     </h2>
 
-    <img id="frank1" src="assets/images/PaybackWordGuess.jpg">
+    <img id="frank1" src="assets/images/PaybackWordGuess.jpg" width="500px" height="500px">
 
 
     <script type="text/javascript">
 
 
+        // Alert User Welcome to Payback Word Guess Game
+        alert("Welcome to The Payback Word Guess Game where Guessing the right Word can PAY YOU BACK! We're Excited to Have you here. Click Ok to Play, Click Cancel to Quit");
+
+        // document.getElementById("frank1").addEventListener("onkeydown", myFunction);
 
         // Create Word Guess Bank of Words 
 
         var wordBank = [
-            "Aardvark",
-            "Albatross",
-            "Alligator",
-            "Alpaca",
-            "Ant",
-            "Anteater",
-            "Antelope",
-            "Ape",
-            "Armadillo",
-            "Donkey",
-            "Baboon",
-            "Badger",
-            "Barracuda",
-            "Bat",
-            "Bear",
-            "Beaver",
-            "Bee",
-            "Bison",
-            "Boar",
-            "Buffalo",
-            "Butterfly",
-            "Camel",
-            "Capybara",
-            "Caribou",
-            "Cassowary",
-            "Cat",
-            "Caterpillar",
-            "Cattle",
-            "Chamois",
-            "Cheetah",
-            "Chicken",
-            "Chimpanzee",
-            "Chinchilla",
-            "Chough",
-            "Clam",
-            "Cobra",
-            "Cockroach",
-            "Cod",
-            "Cormorant",
-            "Coyote",
-            "Crab",
-            "Crane",
-            "Crocodile",
-            "Crow",
-            "Curlew",
-            "Deer",
-            "Dinosaur",
-            "Dog",
-            "Dogfish",
-            "Dolphin",
-            "Dotterel",
-            "Dove",
-            "Dragonfly",
-            "Duck",
-            "Dugong",
-            "Dunlin",
-            "Eagle",
-            "Echidna",
-            "Eel",
-            "Eland",
-            "Elephant",
-            "Elk",
-            "Emu",
-            "Falcon",
-            "Ferret",
-            "Finch",
-            "Fish",
-            "Flamingo",
-            "Fly",
-            "Fox",
-            "Frog",
-            "Gaur",
-            "Gazelle",
-            "Gerbil",
-            "Giraffe",
-            "Gnat",
-            "Gnu",
-            "Goat",
-            "Goldfinch",
-            "Goldfish",
-            "Goose",
-            "Gorilla",
-            "Goshawk",
-            "Grasshopper",
-            "Grouse",
-            "Guanaco",
-            "Gull",
-            "Hamster",
-            "Hare",
-            "Hawk",
-            "Hedgehog",
-            "Heron",
-            "Herring",
-            "Hippopotamus",
-            "Hornet",
-            "Horse",
-            "Human",
-            "Hummingbird",
-            "Hyena",
-            "Ibex",
-            "Ibis",
-            "Jackal",
-            "Jaguar",
-            "Jay",
-            "Jellyfish",
-            "Kangaroo",
-            "Kingfisher",
-            "Koala",
-            "Kookabura",
-            "Kouprey",
-            "Kudu",
-            "Lapwing",
-            "Lark",
-            "Lemur",
-            "Leopard",
-            "Lion",
-            "Llama",
-            "Lobster",
-            "Locust",
-            "Loris",
-            "Louse",
-            "Lyrebird",
-            "Magpie",
-            "Mallard",
-            "Manatee",
-            "Mandrill",
-            "Mantis",
-            "Marten",
-            "Meerkat",
-            "Mink",
-            "Mole",
-            "Mongoose",
-            "Monkey",
-            "Moose",
-            "Mosquito",
-            "Mouse",
-            "Mule",
-            "Narwhal",
-            "Newt",
-            "Nightingale",
-            "Octopus",
-            "Okapi",
-            "Opossum",
-            "Oryx",
-            "Ostrich",
-            "Otter",
-            "Owl",
-            "Oyster",
-            "Panther",
-            "Parrot",
-            "Partridge",
-            "Peafowl",
-            "Pelican",
-            "Penguin",
-            "Pheasant",
-            "Pig",
-            "Pigeon",
-            "Pony",
-            "Porcupine",
-            "Porpoise",
-            "Quail",
-            "Quelea",
-            "Quetzal",
-            "Rabbit",
-            "Raccoon",
-            "Rail",
-            "Ram",
-            "Rat",
-            "Raven",
-            "Red deer",
-            "Red panda",
-            "Reindeer",
-            "Rhinoceros",
-            "Rook",
-            "Salamander",
-            "Salmon",
-            "Sand Dollar",
-            "Sandpiper",
-            "Sardine",
-            "Scorpion",
-            "Seahorse",
-            "Seal",
-            "Shark",
-            "Sheep",
-            "Shrew",
-            "Skunk",
-            "Snail",
-            "Snake",
-            "Sparrow",
-            "Spider",
-            "Spoonbill",
-            "Squid",
-            "Squirrel",
-            "Starling",
-            "Stingray",
-            "Stinkbug",
-            "Stork",
-            "Swallow",
-            "Swan",
-            "Tapir",
-            "Tarsier",
-            "Termite",
-            "Tiger",
-            "Toad",
-            "Trout",
-            "Turkey",
-            "Turtle",
-            "Viper",
-            "Vulture",
-            "Wallaby",
-            "Walrus",
-            "Wasp",
-            "Weasel",
-            "Whale",
-            "Wildcat",
-            "Wolf",
-            "Wolverine",
-            "Wombat",
-            "Woodcock",
-            "Woodpecker",
-            "Worm",
-            "Wren",
-            "Yak",
-            "Zebra"
+            "cat",
+            "dog",
+            "mouse",
+            "elephant",
+            "horse",
+            "bear",
+            "giraffe",
+            "monkey",
+            "fish",
+            "zebra"
         ];
 
-        // Computer Picks a Random Word
+        //Computer Picks a Random Word
         var word = wordBank[Math.floor(Math.random() * wordBank.length)];
 
         // Hidden Answer Array to hide Randomly Selected Word
         var hiddenAnswer = [];
         for (var i = 0; i < word.length; i++) {
+            console.log(word);
             hiddenAnswer[i] = "_";
         }
 
         var remainingLetters = word.length;
 
-        // The Game 
+        // the Game Loop
 
         while (remainingLetters > 0) {
-            alert(wordBank.join(" "));
+            alert(hiddenAnswer.join());
 
-
-            // Get a Guess from Player 
-            var guess = prompt("Guess the Hidden Word in our Animal House Word Bank, or Click Cancel to Quit");
+            var guess = prompt("Guess a letter, or click Cancel to Quit");
             if (guess === null) {
-
-                // Exit
                 break;
-            } else if (guess.length !== 1) {
+            }
+            else if (guess.length !== 1) {
+                alert("Please enter your single letter guess.");
 
-                alert("Please Enter Your Single Letter Guess.");
-            } else {
-                // Update the game with the guess
+
+            }
+
+            else {
                 for (var j = 0; j < word.length; j++) {
                     if (word[j] === guess) {
-                        hiddenAnswer[j] = guess;
+                        wordBank[j] = guess;
                         remainingLetters--;
-
                     }
-
                 }
 
             }
-            // End of Game Loop
+
+
+
         }
-        // Show the Answer and Congratulate the player
-        alert(hiddenAnswer.join(" "));
-        alert("Great Job! The Answer Was " + word);
+
+
+
+
 
 
 
 
 
     </script>
+
+
+
+
+
 </body>
 
 </html>
