add title changes

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h1>Payback Word Guess Game</h1>
 
         <h2>
-            <quote>"Where Guessing the Right Word can Pay You Back!"</quote>
+            <quote>"Where Guessing the right Word can Pay You Back!" Codeword Animals ;-)</quote>
         </h2>
 
 
@@ -41,9 +41,9 @@
 
         </div> -->
     </div>
-    <div id="instructions">
+    <!-- <div id="instructions">
         <button class="btn btn-primary" id="startButton">Click Here to Begin</button>
-    </div>
+    </div> -->
 
 
     <div id="guesses"></div>
